# Unitary-Decomp

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: fourier_decomposition.ipynb
src/unitary_decomp/: __init__.py  bell_interferometer.py  clements_interferometer.py  lplm_interferometer.py  matrix_operations.py
src/unitary_decomp/optimization/: __init__.py  fourier_optimizer.py  jax_optimizer.py
src/unitary_decomp/plot/: __init__.py  phases_plot.py
