[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unitary_decomp"
dynamic = ["version"]
description = "Decomposition algorithms for linear optical unitaries."
authors = [
    { name="Vincent Girouard", email="vincent-2.girouard@polymtl.ca" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "jax>=0.7.0",
    "optax>=0.2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
]

[project.urls]
Homepage = "https://github.com/polyquantique/Universal-Interferometers"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["unitary_decomp"]

[tool.setuptools.dynamic]  
version = {attr = "unitary_decomp.__version__"}
